5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4006/executions/1573_1560.log
== TEST (2019-03-13 14:15:19) 
-- CODE:
string = "Augusta Ada Byron,a condessa de Lovelace,nasceu em 1815,na Inglaterra"
print(string.lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:15:22) 
-- CODE:
string = "Augusta Ada Byron,a condessa de Lovelace,nasceu em 1815,na Inglaterra"
print(string.lower())
-- EXECUTION TIME:
0.182531
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:16:02) 
-- CODE:
string = "Augusta Ada Byron,a condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:16:03) 
-- CODE:
string = "Augusta Ada Byron,a condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.157983
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:16:24) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:16:25) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.18092
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:16:27) 
-- CODE:
string = "Augusta Ada Byron,a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron,a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:16:36) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:16:40) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.145721
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:17:05) 
-- CODE:
string ="Augusta Ada Byron, a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace,nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:17:08) 
-- CODE:
string ="Augusta Ada Byron, a Condessa de Lovelace,nasceu em 1815,na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.106042
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace,nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:17:57) 
-- CODE:
String("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.")
print(string.lower())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    String("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.")
NameError: name 'String' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:18:20) 
-- CODE:
string="Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.")
print(string.lower())
-- ERROR:
File "XXXX", line 1
    string="Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.")
                                                                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:18:51) 
-- CODE:
string="Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.180872
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
